--- a/manuscript.html
+++ b/manuscript.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/dda10d856b8016fc3d0fcfc284a660bff0988e05/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/dda10d856b8016fc3d0fcfc284a660bff0988e05/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/dda10d856b8016fc3d0fcfc284a660bff0988e05/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/dda10d856b8016fc3d0fcfc284a660bff0988e05/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/dda10d856b8016fc3d0fcfc284a660bff0988e05">banyekalaok/cee498report@dda10d8</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/9b740c3c533bae37e41d27f41137357f9d4ce793">banyekalaok/cee498report@9b740c3</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -352,15 +352,17 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>Of the 48 bus lines figure 3 shows that the first 11 lines below (indicated by the boolean output “True”) conducted more than 1,050 trips in August. 1,050 trips represents an average of 10 trips per workday, which is considered substantive in this analysis.</p>
 <p><strong>Figure 3. Bus line distribution</strong></p>
 <h3 id="dependent-variables">Dependent Variables</h3>
-<p>One of the unique challenges faced in this data was what to do with the time data (schedule start and end times). Firstly, the data was provided as strings, therefore, they needed to be converted to datetime format. Secondly, some of the data entries that were not on the conventional 24-hr time format, i.e., sometimes were between 24:00 and 26:00 hours. This is likely because the timestamps represent the bus driver workshifts. Workshifts are easier to monitor and track on a continous scale from clock-in to clock-out than to break-up because of the start of a new day. A function was created to correct the time to be in the 24-hr format then the times were used to determine the duration of a trip (schedule end time - schedule start time).</p>
+<p>One of the unique challenges faced in this data was what to do with the time data (schedule start and end times). Firstly, the data was provided as strings, therefore, they needed to be converted to datetime format. Secondly, some of the data entries that were not on the conventional 24-hr time format, i.e., some times were between 24:00 and 26:00 hours. This is likely because the timestamps represent the bus driver workshifts. Workshifts are easier to monitor and track on a continous scale from clock-in to clock-out than to break-up because of the start of a new day. A function was created to correct the time to be in the 24-hr format then the times were used to determine the duration of a trip (schedule end time - schedule start time).</p>
 <h2 id="investigating-data-inisghts">Investigating Data Inisghts</h2>
 <p><strong><em>Show meaningful plots and correlations. A few examples are provided below</em></strong></p>
-<p>First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target ‘Load avg’, which gives us an idea which features might be the most predictive.</p>
-<div id="fig:image2" class="fignos">
+<p>First, we dropped all the empty columns and columns with categorical values or string values, which can not be used as inputs to train the model. Then a heatmap is used to show the pair-wise correlation between the remaining features and our target ‘Load avg’, which gives us an idea which features might be the most predictive and which features we should drop because of a poor correlation with our target.</p>
 <figure>
-<img src="images/eda6.png" alt="" /><figcaption><span>Figure 1:</span> correlation heat map</figcaption>
+<img src="images/eda6.png" alt="" /><figcaption>correlation heat map</figcaption>
 </figure>
-</div>
+<p>Then, a pairwise scatter plot is used to show the degree of linearity of the relationship between each feature, which gives us a rough idea as to what kind of model should be used.</p>
+<figure>
+<img src="images/eda7.png" alt="" /><figcaption>correlation heat map</figcaption>
+</figure>
 <p>As can be seen in figure 8, each day has a very similar distribution, however, Monday and Thursday have some outliers beyond the maximum. This gives some insight and confirms that the number of trips per day are fairly evenly distributed.</p>
 <p><strong>Figure 8. Box plot of duration per day full dataset.</strong></p>
 <p>Figure 14 informs that the a $ trip &lt; 12 minutes $ long have no stops. The number of stops then steadily increase with time to a max of 42 at a trip of duration ~ 55 to 65 minutes.</p>
@@ -431,18 +433,6 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>As expected, the baseline model had a high root mean square error (RMSE) and mean absolute percentage error (MAPE) on both the training and validation data. The next section assesses if a dense model can produce a better model with lower metrics.</p>
 <h3 id="develop-a-more-complex-model">Develop a More Complex Model</h3>
 <p>As can be seen, the dense linear model results in better (lower) metrics than the baseline model. However, the improvement in the model performance is not that significant. The next section assesses if a dense non-linear model can produce a better model with lower metrics.</p>
-<h3 id="neural-network-model">Neural Network Model</h3>
-<p>The neural network model has been taken in our team. As a subfield of machine learning, neural network model would input data, and then train themselves to recognize patterns found in data, finally output a set of similar data. Therefore, choosing neural network would process the data like human brain. In our project, it works very well and precisely, and predicts a correspondingly positive relationship between predictions and targets, shown in the Figure x The targets are validation value, and the perditions are predicted value. As the result shows, predictions and targets are very consistent. The detail coding process would show as follows.
-Figure X Comparison between predictions and targets
-A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in Figure 2. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix.
-Figure X Neural Network
-When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in Figure 3. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain.
-Figure X Weight correction
-In the neural network model, find an optimum way to weight correction is crucial.
-If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in Figure 4.
-Figure X Plot in overfitting, optimum, and underfitting
-To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model.
-After the optimization as stochastic gradient descent (SGD), take learning rate as 0.1, the RMSE is 0.268, and the R2 score is 0.965.</p>
 <h3 id="most-predictive-model">Most Predictive Model</h3>
 <p>** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**</p>
 <h1 id="chapter-4.-conclusions">Chapter 4. Conclusions</h1>
