--- a/manuscript.html
+++ b/manuscript.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/9b740c3c533bae37e41d27f41137357f9d4ce793/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/9b740c3c533bae37e41d27f41137357f9d4ce793">banyekalaok/cee498report@9b740c3</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7">banyekalaok/cee498report@0a4e5a2</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -433,6 +433,22 @@ The following section summarizes the EDA results that are relevant to the model 
 <p>As expected, the baseline model had a high root mean square error (RMSE) and mean absolute percentage error (MAPE) on both the training and validation data. The next section assesses if a dense model can produce a better model with lower metrics.</p>
 <h3 id="develop-a-more-complex-model">Develop a More Complex Model</h3>
 <p>As can be seen, the dense linear model results in better (lower) metrics than the baseline model. However, the improvement in the model performance is not that significant. The next section assesses if a dense non-linear model can produce a better model with lower metrics.</p>
+<h3 id="neural-network-model">Neural Network Model</h3>
+<p>The neural network model has been taken in our team. As a subfield of machine learning, neural network model would input data, and then train themselves to recognize patterns found in data, finally output a set of similar data. Therefore, choosing neural network would process the data like human brain. In our project, it works very well and precisely, and predicts a correspondingly positive relationship between predictions and targets, shown in the <strong>Figure #</strong>. The targets are validation value, and the perditions are predicted value. As the result shows, predictions and targets are very consistent. The detail coding process would show as follows.
+<img src="images/Neural%20target%20and%20prediction.png" alt="Neural target and predition" />
+<strong>Figure #. Comparison between predictions and targets.</strong></p>
+<p>A typical neural network model would have three kinds of layers, which are input layer, hidden layer, and output layer, shown in <strong>Figure #</strong>. Among our teams, one of our neural network models contains 4 layers, composed by 1 input layer, 2 hidden layers, and 1 output layer. Both dense in hidden layers are 128, which is shown in Appendix.
+<img src="images/Neural%20network.png" alt="Neural network" />
+<strong>Figure #. Nenural Network.</strong></p>
+<p>When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in <strong>Figure #</strong>. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain.
+https://github.com/banyekalaok/cee498report/blob/master/content/images/Weight%20correction.png
+<img src="images/Weight%20correction.png" alt="Weight correciton" />
+<strong>Figure #. Weight correction.</strong></p>
+<p>In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in <strong>Figure #</strong>.
+<img src="images/Plot%20in%20overfitting.png" alt="Plot" />
+<strong>Figure #. Plot in overfitting,optimum, and underfitting.</strong></p>
+<p>To make the predictions match well in validations, batch mode would be applied in this model. In the batch model, the weight updating is performed when all samples in the epochs are presented to the network. In this model, the epoch is 40, which means there are 40 times to wight the model.
+After the optimization as stochastic gradient descent (SGD), take learning rate as 0.1, the RMSE is 0.268, and the R2 score is 0.965.</p>
 <h3 id="most-predictive-model">Most Predictive Model</h3>
 <p>** My model was best with relu layers and dropout regularization only. Would probably be even better if it had automatic hyperparameter and parameter selection!**</p>
 <h1 id="chapter-4.-conclusions">Chapter 4. Conclusions</h1>
