--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -46,9 +46,9 @@
   <meta name="citation_fulltext_html_url" content="https://banyekalaok.github.io/cee498report/" />
   <meta name="citation_pdf_url" content="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://banyekalaok.github.io/cee498report/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/" />
-  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/" />
-  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://banyekalaok.github.io/cee498report/v/0237bbe90ae13b08e34efe156029d27ba71575d3/" />
+  <meta name="manubot_html_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0237bbe90ae13b08e34efe156029d27ba71575d3/" />
+  <meta name="manubot_pdf_url_versioned" content="https://banyekalaok.github.io/cee498report/v/0237bbe90ae13b08e34efe156029d27ba71575d3/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -62,9 +62,9 @@
 </header>
 <p><small><em>
 This manuscript
-(<a href="https://banyekalaok.github.io/cee498report/v/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7/">permalink</a>)
+(<a href="https://banyekalaok.github.io/cee498report/v/0237bbe90ae13b08e34efe156029d27ba71575d3/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/banyekalaok/cee498report/tree/0a4e5a2aef7c5c21732670ef17cccca5ab84f4d7">banyekalaok/cee498report@0a4e5a2</a>
+from <a href="https://github.com/banyekalaok/cee498report/tree/0237bbe90ae13b08e34efe156029d27ba71575d3">banyekalaok/cee498report@0237bbe</a>
 on December 6, 2020.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -441,8 +441,7 @@ The following section summarizes the EDA results that are relevant to the model 
 <img src="images/Neural%20network.png" alt="Neural network" />
 <strong>Figure #. Nenural Network.</strong></p>
 <p>When processing the code, in the training part, take learning rate to adjust weight correction. The formula is shown in <strong>Figure #</strong>. In every time, input signal into neural network model, and multiple learning rate, local gradient could correct the model sequentially. After all process done, the model would be optimized as precise as possible, similar to human brain.
-https://github.com/banyekalaok/cee498report/blob/master/content/images/Weight%20correction.png
-<img src="images/Weight%20correction.png" alt="Weight correciton" />
+<img src="content/images/Weight%20correction.png" alt="Weight correciton" />
 <strong>Figure #. Weight correction.</strong></p>
 <p>In the neural network model, find an optimum way to weight correction is crucial. If a network performs well on the training data but very badly on testing set, the network might be over-trained, which is overfitting. On the other hand, if the network works bad on the training data, the network might be under-trained, which is underfitting. Besides, an under-trained network also performs badly on the testing set. A drawing to compare these would be shown in <strong>Figure #</strong>.
 <img src="images/Plot%20in%20overfitting.png" alt="Plot" />
